--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-core": "^6.26.0",
     "chai": "^4.1.1",
     "mocha": "^3.5.0",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "sinon": "^3.2.0"
   }
 }
