--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongo-interlude",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Lightweight npm package to provide cleaning operations with mongo.",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "chai": "^4.1.1",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^3.5.0",
     "mongoose": "^4.11.7",
     "sinon": "^3.2.0"
